<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_in_gradient"
    tools:context=".contact_profiles.view.ContactProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_to_icon_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/icon_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="48dp"
            app:layout_constraintLeft_toRightOf="@+id/btn_to_icon_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="48dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:id="@+id/recycler_view_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
      />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_fail_to_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/message_to_fail_contact"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_fail"/>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/reload_to_contact"
            app:layout_constraintTop_toBottomOf="@+id/message_to_fail_contact"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ButtonDefault"
            android:text="@string/reloading" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_loading_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:visibility="visible"
        android:orientation="vertical">

        <include layout="@layout/loading_contacts"/>
        <include layout="@layout/loading_contacts"/>
        <include layout="@layout/loading_contacts"/>
        <include layout="@layout/loading_contacts"/>
        <include layout="@layout/loading_contacts"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>