<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@drawable/background_in_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_profile_loaded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <View
            android:id="@+id/background_to_profile"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/background_in_gradient_to_icon_profile"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_my_profile"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Juliana Trindade"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/image_my_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/mail_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="juju@email.com"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/name_my_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <TextView
            android:id="@+id/status_generate_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loading_to_generate_token"
            android:textSize="16sp"
            android:textColor="@color/oceania"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <ProgressBar
            android:id="@+id/loading_to_generate_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/send_money"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            />

        <Button
            android:id="@+id/send_money"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ButtonDefault"
            android:text="@string/send_money"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/history_of_sends"/>

        <Button
            android:id="@+id/history_of_sends"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ButtonDefault"
            android:text="@string/history_of_sends"
            android:layout_marginBottom="72dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_fail_to_my_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/message_to_fail"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_fail"/>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/reload"
            app:layout_constraintTop_toBottomOf="@+id/message_to_fail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ButtonDefault"
            android:text="@string/reloading" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@+id/loading_my_profile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        layout="@layout/loading_my_profile"/>

</androidx.constraintlayout.widget.ConstraintLayout>