<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_dialog_fragment">

        <ImageButton
            android:id="@+id/icon_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@null"
            android:src="@drawable/icon_close"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/background_icon_profile_dialog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/background_to_image_contact"
            android:gravity="center"
            android:textSize="36sp"
            android:textColor="@color/oceania"
            tools:text="AS"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="84dp"
            android:layout_height="84dp"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/icon_profile_dialog"
            android:padding="4dp"
            android:layout_width="84dp"
            android:layout_height="84dp"/>

        <TextView
            android:id="@+id/name_contact_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/icon_profile_dialog"
            tools:text="Anderson Santos"
            />

        <TextView
            android:id="@+id/phone_contact_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/name_contact_dialog"
            tools:text="(11) 98456-8745"
            />

        <TextView
            android:id="@+id/title_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/send_value"
            app:layout_constraintTop_toBottomOf="@id/phone_contact_dialog"
            />


        <FrameLayout
            android:id="@+id/background_input_value"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/background_to_input_value"
            app:layout_constraintTop_toBottomOf="@id/title_send"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/input_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="numberDecimal"
                android:hint="@string/hint_to_input_value"
                android:textColorHint="@color/oceania"
                android:textColor="@color/oceania"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold" />

        </FrameLayout>


        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/send_money_in_dialog"
            android:layout_height="54dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:textSize="20sp"
            style="@style/ButtonDefault"
            app:layout_constraintTop_toBottomOf="@id/background_input_value"
            android:text="@string/send" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>